--- a/resources/sass/site-components/navbar.scss
+++ b/resources/sass/site-components/navbar.scss
@@ -6,7 +6,7 @@
       background-color: color-mix(in srgb, var(--purple-clr_700), transparent 30%);
       grid-area: nav;
       border-radius: 20px;
-      z-index: 1;
+      z-index: 3;
       .navbar-nav {
         display: flex;
         gap: 5px;
@@ -15,6 +15,9 @@
           border-radius: 10px;
           transition: 0.1s ease;
           border: 2px transparent solid;
+          > a {
+            color: var(--purple-clr_50);
+          }
           .dropdown-toggle {
             display: flex;
             place-content: center;
@@ -26,8 +29,8 @@
               transform: rotate(-90deg);
             }
           }
-          &:has(.show){
-          // &.show {
+          &:has(.show) {
+            // &.show {
             border-radius: 10px 10px 0 0;
             border: 2px var(--purple-clr_300) solid;
             background-color: var(--purple-clr_50);
